<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.scijava</groupId>
        <artifactId>pom-scijava</artifactId>
        <version>38.0.1</version>
    </parent>

    <groupId>com.fiji.mcp</groupId>
    <artifactId>fiji-mcp-bridge</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>fiji-mcp-bridge</name>
    <description>WebSocket bridge plugin for fiji-mcp</description>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.release>8</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <license.copyrightOwners>N/A</license.copyrightOwners>
        <license.licenseName>N/A</license.licenseName>
        <!-- Disable pom-scijava enforcer checks that require full OSS metadata -->
        <enforcer.skip>true</enforcer.skip>
    </properties>

    <dependencies>
        <!-- WebSocket server -->
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.5.7</version>
        </dependency>

        <!-- JSON (already in Fiji) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- ImageJ 1.x API -->
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>ij</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- SciJava (Command, EventService, ScriptService) -->
        <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>scijava-common</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <release>8</release>
                </configuration>
            </plugin>
            <!-- Shade Java-WebSocket into the plugin JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <artifactSet>
                                <includes>
                                    <include>org.java-websocket:Java-WebSocket</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>org.java_websocket</pattern>
                                    <shadedPattern>com.fiji.mcp.shaded.websocket</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>scijava</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
    </repositories>
</project>
